css.css
/* ... */
.text-red,
.hover-text-red:hover {
    color: #f44336 !important;
}

.text-sand,
.hover-text-sand:hover {
    color: #fdf5e6 !important;
}

.text-teal,
.hover-text-teal:hover {
    color: #009688 !important;
}

.text-yellow,
.hover-text-yellow:hover {
    color: #d2be0e !important;
}

.text-white,
.hover-text-white:hover {
    color: #fff !important;
}

.text-black,
.hover-text-black:hover {
    color: #000 !important;
}

.text-grey,
.hover-text-grey:hover,
.text-gray,
.hover-text-gray:hover {
    color: #757575 !important;
}

.text-light-grey,
.hover-text-light-grey:hover,
.text-light-gray,
.hover-text-light-gray:hover {
    color: #f1f1f1 !important;
}

.text-dark-grey,
.hover-text-dark-grey:hover,
.text-dark-gray,
.hover-text-dark-gray:hover {
    color: #3a3a3a !important;
}

.border-amber,
.hover-border-amber:hover {
    border-color: #ffc107 !important;
}

.border-aqua,
.hover-border-aqua:hover {
    border-color: #00ffff !important;
}

.border-blue,
.hover-border-blue:hover {
    border-color: #2196f3 !important;
}

.border-light-blue,
.hover-border-light-blue:hover {
    border-color: #87ceeb !important;
}

.border-brown,
.hover-border-brown:hover {
    border-color: #795548 !important;
}

.border-cyan,
.hover-border-cyan:hover {
    border-color: #00bcd4 !important;
}

.border-blue-grey,
.hover-border-blue-grey:hover,
.border-blue-gray,
.hover-border-blue-gray:hover {
    border-color: #607d8b !important;
}

.border-green,
.hover-border-green:hover {
    border-color: #4caf50 !important;
}

.border-light-green,
.hover-border-light-green:hover {
    border-color: #8bc34a !important;
}

.border-indigo,
.hover-border-indigo:hover {
    border-color: #3f51b5 !important;
}

.border-khaki,
.hover-border-khaki:hover {
    border-color: #f0e68c !important;
}

.border-lime,
.hover-border-lime:hover {
    border-color: #cddc39 !important;
}

.border-orange,
.hover-border-orange:hover {
    border-color: #ff9800 !important;
}

.border-deep-orange,
.hover-border-deep-orange:hover {
    border-color: #ff5722 !important;
}

.border-pink,
.hover-border-pink:hover {
    border-color: #e91e63 !important;
}

.border-purple,
.hover-border-purple:hover {
    border-color: #9c27b0 !important;
}

.border-deep-purple,
.hover-border-deep-purple:hover {
    border-color: #673ab7 !important;
}

.border-red,
.hover-border-red:hover {
    border-color: #f44336 !important;
}

.border-sand,
.hover-border-sand:hover {
    border-color: #fdf5e6 !important;
}

.border-teal,
.hover-border-teal:hover {
    border-color: #009688 !important;
}

.border-yellow,
.hover-border-yellow:hover {
    border-color: #ffeb3b !important;
}

.border-white,
.hover-border-white:hover {
    border-color: #fff !important;
}

.border-black,
.hover-border-black:hover {
    border-color: #000 !important;
}

.border-grey,
.hover-border-grey:hover,
.border-gray,
.hover-border-gray:hover {
    border-color: #9e9e9e !important;
}

.border-light-grey,
.hover-border-light-grey:hover,
.border-light-gray,
.hover-border-light-gray:hover {
    border-color: #f1f1f1 !important;
}

.border-dark-grey,
.hover-border-dark-grey:hover,
.border-dark-gray,
.hover-border-dark-gray:hover {
    border-color: #616161 !important;
}

.border-pale-red,
.hover-border-pale-red:hover {
    border-color: #ffe7e7 !important;
}

.border-pale-green,
.hover-border-pale-green:hover {
    border-color: #e7ffe7 !important;
}

.border-pale-yellow,
.hover-border-pale-yellow:hover {
    border-color: #ffffcc !important;
}

.border-pale-blue,
.hover-border-pale-blue:hover {
    border-color: #e7ffff !important;
}

.home-history {
    display: flex;
    flex-direction: column;
    border: 2px solid black;
    border-radius: 16px;
    padding: 7px;
    background-color: wheat;
    box-shadow: none;
    margin-top: 10px;
    margin-bottom: 10px;
}

.header-text {
    font-size: 1.5em;
    font-weight: 900;
    text-decoration: underline;
    margin-bottom: -10px
}

.images {
    border: 5px solid black;
    margin-top: 5px;
    margin-bottom: -10px;
}

.image-text {
    color:grey;
    font-size: 0.8em;
    margin-bottom: 10px;
}

.u-image-text:hover {
    color: rgb(90, 90, 90);
    font-weight: 600;
}

li {
    display: flex;
    flex-direction: column;
    border: 2px solid black;
    border-radius: 16px;
    padding: 3px;
    margin-top: 5px;
    margin-bottom: 5px;
    background-color: wheat;
    box-shadow: none;
    width: 1000px;    
}

